--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,14 +30,14 @@
 
             <div class="input-group mb-3">
                 <input v-model="newserie.name" @keyUp.enter="fetchStoreSerie()" type="text" class="form-control" placeholder="Nuova Serie..." aria-label="Nuova Serie..." aria-describedby="button-add-serie" />
-                <button @click="fetchStoreSerie()" class="btn btn-outline-secondary" type="button" id="button-add-serie">Button</button>
+                <button @click="fetchStoreSerie()" class="btn btn-outline-secondary" type="button" id="button-add-serie">Aggiungi</button>
               </div>
 
             <div class="d-flex justify-content-center mt-3">
                 <div class="card">
                     <div class="card-header">Serie da vedere</div>
                     <ul class="list-group list-group-flush">
-                        <li v-for="(serie, index) in serietv"  class="list-group-item d-flex justify-content-between" :class="serie.done == true ? 'text-decoration-line-through' : '' " @click="fetchUpdateSerie(index, serie)"> <span>{{ serie.name }}</span> <i class="bi bi-trash text-danger" @click="fetchDeleteSerie(index)"></i></li>
+                        <li v-for="(serie, index) in serietv"  class="list-group-item d-flex justify-content-between" :class="serie.done == true ? 'text-decoration-line-through' : '' "> <span @click="fetchUpdateSerie(index, serie)">{{ serie.name }}</span> <i class="bi bi-trash text-danger" @click="fetchDeleteSerie(index)"></i></li>
                     </ul>
                 </div>
             </div>
